# GraduateIntegratedProject

./: CMakeCache.txt  CMakeLists.txt  CalibrationPratice  ClassifyTest  Convert  EnF.xml  Makefile  NiViewerTest  Protonect  TrackingTest  VID5.xml  XYConverter  camera_convert1.csv  camera_convert2.csv  cmake_install.cmake  compile_commands.json  extrinsics.xml  extrinsics.yml  first.txt  first_camera.txt  in_VID5.xml  init.sh  integrated_project.kdev4  intrinsics.xml  intrinsics.yml  out_camera_data.xml  second.txt  stereo_calib.xml  test.xml  test1.txt  test1.xml
data/skeleton/: data.csv  data_1017_merge.csv  merge.csv  merge_1017.csv  muscle.csv  predict.csv  predict_1017.csv  predict_1017_merge.csv  stand.csv
data/skeleton/1/: .~lock.0.csv#  .~lock.JOINT_HEAD.csv#  2.csv  3.csv  JOINT_HEAD.csv  JOINT_LEFT_ELBOW.csv  JOINT_LEFT_HAND.csv  JOINT_LEFT_HIP.csv  JOINT_LEFT_SHOULDER.csv  JOINT_NECK.csv  JOINT_RIGHT_ELBOW.csv  JOINT_RIGHT_HAND.csv  JOINT_RIGHT_HIP.csv  JOINT_RIGHT_SHOULDER.csv  JOINT_TORSO.csv  NECK_TO_RIGHTSHOULDER.csv  RIGHTSHOULDER_TO_RIGHTELBOW.csv  TORSO_TO_RIGHTHIP.csv  sk2.csv
data/skeleton/2/: .~lock.JOINT_HEAD.csv#  0.csv  1.csv  2.csv  4.csv  JOINT_HEAD.csv  JOINT_LEFT_ELBOW.csv  JOINT_LEFT_HAND.csv  JOINT_LEFT_HIP.csv  JOINT_LEFT_SHOULDER.csv  JOINT_NECK.csv  JOINT_RIGHT_ELBOW.csv  JOINT_RIGHT_HAND.csv  JOINT_RIGHT_HIP.csv  JOINT_RIGHT_SHOULDER.csv  JOINT_TORSO.csv  LEFTELBOW_TO_LEFTHAND.csv  (+7 more)
include/: TrackingDrawer.h  customUserTracker.h  niViewerTest.h  simpleprotonect.h  simpletracker.h  viewer.h
include/SimpleFreenect/: Skeleton.h  TrackingDrawer.h  simpletracker.h
modules/: FindFreenect2.cmake  FindGLFW3.cmake  FindOpenNI2.cmake  FindOpenni-nite.cmake
src/Common/: viewer.cpp
src/OpenCVPractice/: convert.cpp  stereo_calib.cpp
src/OpenNiTest/: .niViewerTest.cpp.kate-swp  UserTrackingTest.cpp  niViewerTest.cpp
src/Protonect/: Protonect.cpp
src/SimpleFreenect/: Skeleton.cpp  TrackingDrawer.cpp  main.cpp  simpleprotonect.cpp  simpletracker.cpp  tmp.cpp
src/SmallXY/: SmallXYMain.cpp
temp/: extrinsics.xml  first.txt  intrinsics.xml  second.txt  test2.xml
(+159 files in other folders)
